<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Reddinator</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_popular">Loading Popular&#8230;</string>
    <string name="load_more">Load more&#8230;</string>
    <string name="search">Search</string>
    <string name="configure">Configure</string>
    <string name="refresh">Refresh</string>
    <string name="error">Error</string>
    <string name="logo">logo</string>
    <string name="loading_img">loading image</string>
    <string name="img">image</string>
    <string name="loading_pop_desc">loading popular</string>
    <string name="sort_hot">Sort:  hot</string>
    <string name="thumbnails">Thumbnails</string>
    <string name="reddit_domain">reddit.com</string>
    <string name="icon">icon</string>
	<string name="add">Add</string>
	<string name="my_subreddits">My Subreddits</string>
	<string name="sr_import">Import</string>
	<string name="username">username</string>
	<string name="password">password</string>
	<string name="replace_current_list">Replace current list</string>
	<string name="share">Share</string>
	<string name="widget_prefs">Widget Prefs</string>
</resources>