<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/widgetpref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true" >

        <Button
            android:id="@+id/sortselect"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="0.62"
            android:background="#EFF7FF"
            android:gravity="center_vertical"
            android:paddingLeft="14dp"
            android:text="@string/sort_hot"
            android:textColor="#FF4500" />

        <CheckBox
            android:id="@+id/thumbnailpref"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.39"
            android:background="#EFF7FF"
            android:paddingLeft="30dp"
            android:text="@string/thumbnails" />

    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/srtoolbar"
        android:background="#FFF" >
        
    </ListView>

    <RelativeLayout
        android:id="@+id/srtoolbar"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/widgetpref2"
        android:background="#CEE3F8" >

        <Button
            android:id="@+id/addsrbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/add" />

        <Button
            android:id="@+id/importsrbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/addsrbutton"
            android:text="@string/sr_import" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="14dp"
            android:text="@string/my_subreddits"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/widgetpref2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="false"
        android:layout_below="@id/widgetpref"
        android:background="#EFF7FF"
        android:gravity="right" >

        <CheckBox
            android:id="@+id/hideinfpref"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.35"
            android:paddingLeft="30dp"
            android:text="Hide Post Info" />

        <CheckBox
            android:id="@+id/bigthumbpref"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.65"
            android:paddingLeft="30dp"
            android:text="Big Thumbs" />

    </LinearLayout>

</RelativeLayout>